# SmartCalc_v2_0

./: CMakeLists.txt  Makefile  README.md
src/: man_ru.texi  qcustomplot.cc  qcustomplot.h
src/backend/back/: model_calculator.cc  model_calculator.h  modify_input.cc  modify_input.h  reverse_polish_notation.cc  reverse_polish_notation.h
src/backend/validator/: valid_user_input.cc  valid_user_input.h
src/controller/: controller.cc  controller.h
src/frontend/credit_calculator/: creditcalc.cc  creditcalc.h  creditcalc.ui
src/frontend/deposit_calculator/: depositcalc.cc  depositcalc.h  depositcalc.ui
src/frontend/graph/: model_graph.cc  model_graph.h  model_graph.ui
src/frontend/main_window/: view.cc  view.h  view.ui
src/frontend/window_input_x/: randomx.cc  randomx.h  randomx.ui
src/main/: main.cc
src/tests/: test.cc
